--- a/lambda/product-handler/package.json
+++ b/lambda/product-handler/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "compile": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"ALERT: no tests yet...\""
   },
   "devDependencies": {
     "aws-sdk": "^2.655.0",
