--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'lambda/product-handler/package-lock.json'
         
+      - run: npm ci
       - run: npm run compile
-
       - run: npm run test
   
