--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,23 @@ jobs:
       - run: npm run compile
       - run: npm run test
   
+  build-cdk:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: cdk
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: 'cdk/package-lock.json'
+        
+      - run: npm ci
+      - run: npm run compile
+      - run: npm run test
