--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
   build-cdk:
     runs-on: ubuntu-latest
 
+    needs: build-lambda
+
     defaults:
       run:
         working-directory: cdk
@@ -49,5 +51,6 @@ jobs:
           cache-dependency-path: 'cdk/package-lock.json'
         
       - run: npm ci
-      - run: npm run compile
-      - run: npm run test
+      #- run: npm run cdk bootstrap
+      - run: npm run cdk synth
+      #- run: npm run cdk deploy
