--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -10,38 +10,50 @@ env:
   NODE_VERSION: 16.x
 
 jobs:
+  # 1 => Build and test the lambda source codes
   build-lambda:
     runs-on: ubuntu-latest
-
     defaults:
       run:
         working-directory: lambda/product-handler
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout latest code
+        uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ env.NODE_VERSION }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: 'lambda/product-handler/package-lock.json'
         
-      - run: npm ci
-      - run: npm run compile
-      - run: npm run test
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Compile code
+        run: npm run compile
+      
+      - name: Run tests
+        run: npm run test
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: lambda-code
+          path: lambda/product-handler/build
+          retention-days: 5
+
   
+  # 2 => Build Infrastructure template
   build-cdk:
     runs-on: ubuntu-latest
-
     needs: build-lambda
-
     defaults:
       run:
         working-directory: cdk
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout latest code
+        uses: actions/checkout@v3
 
       - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v3
@@ -50,7 +62,12 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'cdk/package-lock.json'
         
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
+
       #- run: npm run cdk bootstrap
-      - run: npm run cdk synth
+      
+      - name: Synthesize CloudFormation template
+        run: npm run cdk synth
+
       #- run: npm run cdk deploy
