--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -85,4 +85,4 @@ jobs:
         run: npm run cdk bootstrap
 
       - name: Deploy
-        run: npm run cdk deploy --all --require-approval never
+        run: npm run cdk deploy -- --all --require-approval never
