--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,7 +47,7 @@ jobs:
   # 2 => Deploy the updates
   cd:
     runs-on: ubuntu-latest
-    needs: build-lambda
+    needs: ci
     defaults:
       run:
         working-directory: cdk
