--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -1,4 +1,4 @@
-name: Staging Pull Request Pipeline
+name: PR Pipeline
 
 on:
   pull_request:
@@ -10,7 +10,6 @@ jobs:
   # 1 => Build and test the source codes
   build:
     runs-on: ubuntu-latest
-    environment: staging
     defaults:
       run:
         working-directory: lambda/product-handler
@@ -45,7 +44,6 @@ jobs:
   # 2 => Deploy the updates
   validate-deploy:
     runs-on: ubuntu-latest
-    environment: staging
     needs: build
     defaults:
       run:
