--- a/lambda/product-handler/package.json
+++ b/lambda/product-handler/package.json
@@ -5,14 +5,53 @@
   "main": "app.js",
   "scripts": {
     "compile": "tsc",
-    "test": "echo \"ALERT: no tests yet...\""
+    "test": "jest --maxWorkers=1 --detectOpenHandles --coverage"
   },
   "devDependencies": {
-    "aws-sdk": "^2.655.0",
     "@types/aws-lambda": "^8.10.51",
-    "@types/node": "^13.13.5",
-    "typescript": "^3.8.3"
+    "@types/jest": "^29.2.3",
+    "@types/node": "^13.13.52",
+    "@types/uuid": "^8.3.4",
+    "aws-sdk": "^2.655.0",
+    "jest": "^29.3.1",
+    "jest-extended": "^3.1.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.5.5"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "uuid": "^9.0.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "test",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "setupFilesAfterEnv": [
+      "jest-extended"
+    ],
+    "collectCoverage": true,
+    "maxConcurrency": 1,
+    "collectCoverageFrom": [
+      "**/*.(t|j)s",
+      "!**/*.d.ts",
+      "!<rootDir>/*.ts",
+      "!<rootDir>/**/index.ts",
+      "!<rootDir>/**/*.module.ts",
+      "!<rootDir>/config/**/*"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "~/(.*)": "<rootDir>/$1"
+    }
+  }
 }
