--- a/.github/workflows/build-and-deploy-production.yml
+++ b/.github/workflows/build-and-deploy-production.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
       
       - name: Compile code
-        run: npm run compile
+        run: npm run build:prd
       
       - name: Run tests
         run: npm run test
