--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
       
       - name: Compile code
-        run: npm run compile
+        run: npm run build:prd
       
       - name: Run tests
         run: npm run test
