--- a/lambda/product-handler/package.json
+++ b/lambda/product-handler/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "compile": "tsc",
+    "build": "tsc",
+    "build:prd": "tsc && gulp",
     "test": "jest --maxWorkers=1 --detectOpenHandles --coverage"
   },
   "devDependencies": {
@@ -13,6 +14,8 @@
     "@types/node": "^13.13.52",
     "@types/uuid": "^8.3.4",
     "aws-sdk": "^2.655.0",
+    "gulp": "^4.0.2",
+    "gulp-install": "^1.1.0",
     "jest": "^29.3.1",
     "jest-extended": "^3.1.0",
     "ts-jest": "^29.0.3",
