--- a/lambda/product-handler/package.json
+++ b/lambda/product-handler/package.json
@@ -13,7 +13,7 @@
     "@types/jest": "^29.2.3",
     "@types/node": "^13.13.52",
     "@types/uuid": "^8.3.4",
-    "aws-sdk": "^2.655.0",
+    "aws-sdk": "^2.1254.0",
     "gulp": "^4.0.2",
     "gulp-install": "^1.1.0",
     "jest": "^29.3.1",
@@ -25,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.210.0",
     "uuid": "^9.0.0"
   },
   "jest": {
