--- a/.github/workflows/build-and-deploy-staging.yml
+++ b/.github/workflows/build-and-deploy-staging.yml
@@ -36,11 +36,14 @@ jobs:
       - name: Run tests
         run: npm run test
 
+      - name: Zip build files
+        run: zip -r build.zip ./build
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: lambda-code
-          path: lambda/product-handler/build
+          path: lambda/product-handler/build.zip
           retention-days: 5
 
   
@@ -61,6 +64,9 @@ jobs:
         with:
           name: lambda-code
           path: lambda/product-handler/build
+
+      - name: Unzip build files
+        run: cd ../lambda/product-handler && unzip build.zip
 
       - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v3
